apps/404-deployment-not-found/base/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-not-found
spec:
  selector:
    app: deployment-not-found
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
